tests/baselines/reference/symbolDeclarationEmit12.errors.txt
symbolDeclarationEmit12.ts(5,9): error TS2733: Property '[Symbol.toPrimitive]' was also declared here.
symbolDeclarationEmit12.ts(7,13): error TS2322: Type 'undefined' is not assignable to type 'I'.
symbolDeclarationEmit12.ts(9,13): error TS2718: Duplicate property '[Symbol.toPrimitive]'.
symbolDeclarationEmit12.ts(10,13): error TS2718: Duplicate property '[Symbol.toPrimitive]'.


==== symbolDeclarationEmit12.ts (4 errors) ====
    module M {
        interface I { }
        export class C {
            [Symbol.iterator]: I;
            [Symbol.toPrimitive](x: I) { }
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2733: Property '[Symbol.toPrimitive]' was also declared here.
            [Symbol.isConcatSpreadable](): I {
                return undefined
                ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'I'.
            }
            get [Symbol.toPrimitive]() { return undefined; }
                ~~~~~~~~~~~~~~~~~~~~
!!! error TS2718: Duplicate property '[Symbol.toPrimitive]'.
            set [Symbol.toPrimitive](x: I) { }
                ~~~~~~~~~~~~~~~~~~~~
!!! error TS2718: Duplicate property '[Symbol.toPrimitive]'.
        }
    }